Small changes in multiAssigns, added filter by room and ability to use schedule for parent record type

--- a/ScheduleModule/Views/MultiAssigns/MultiAssignsContentView.xaml
+++ b/ScheduleModule/Views/MultiAssigns/MultiAssignsContentView.xaml
@@ -48,6 +48,12 @@
                             VerticalContentAlignment="Stretch"
                             Background="Transparent"
                             BorderThickness="0 1 0 1">
+                            <ListBox.ItemContainerStyle>
+                                <Style TargetType="{x:Type ListBoxItem}">
+                                    <Setter Property="Focusable" Value="False"/>
+                                    <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+                                </Style>
+                            </ListBox.ItemContainerStyle>
                         </ListBox>
                     </Grid>
                 </ScrollViewer>
