--- a/ScheduleModule/Views/MultiAssigns/MultiAssignRecordTypeView.xaml
+++ b/ScheduleModule/Views/MultiAssigns/MultiAssignRecordTypeView.xaml
@@ -7,73 +7,81 @@
                 BorderBrush="DarkGoldenrod"
                 BorderThickness="0 0 0 1">
             <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="301"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Row="0" Grid.Column="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="auto"/>
-                    </Grid.ColumnDefinitions>
+                <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Button Grid.Row="0" Grid.Column="2" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Right" Width="auto" ToolTip="Убрать услугу"
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="301"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Row="0" Grid.Column="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+                        <Button Grid.Row="0" Grid.Column="2" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Right" Width="auto" ToolTip="Убрать услугу"
                             Command="{Binding Path=DataContext.DeleteRecordTypeCommand, ElementName=SelectedRecordTypesContainer}" CommandParameter="{Binding Path=.}">
-                        <Image Source="pack://application:,,,/Core;Component/Resources/Images/Trash-icon16x16.png" Height="20" Width="20"/>
-                    </Button>
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding Path=RecordTypeName}" FontWeight="Bold"/>
-                    <Button  Grid.Row="2" Grid.Column="0" Command="{Binding AddRoomFilter}" Content="{Binding SelectedRoomName}" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Left" Foreground="#FF1E09F0" HorizontalAlignment="Left" Width="auto"/>
-                    <Button  Grid.Row="3" Grid.Column="0" Command="{Binding AddDoctorFilter}" Content="{Binding SelectedDoctorName}" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Left" Foreground="#FF1E09F0" HorizontalAlignment="Left" Width="auto"/>
-                </Grid>
-                <StackPanel  Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
-                    <ItemsControl ItemsSource="{Binding Dates}"
+                            <Image Source="pack://application:,,,/Core;Component/Resources/Images/Trash-icon16x16.png" Height="20" Width="20"/>
+                        </Button>
+                        <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding Path=RecordTypeName}" FontWeight="Bold"/>
+                        <ComboBox Grid.Row="2" Grid.Column="0" SelectedValue="{Binding SelectedRoomId}" SelectedValuePath="Id" ItemsSource="{Binding Rooms}" HorizontalAlignment="Left" />
+                        <ComboBox Grid.Row="3" Grid.Column="0" SelectedValue="{Binding SelectedDoctorId}" SelectedValuePath="Id" ItemsSource="{Binding Doctors}" HorizontalAlignment="Left" />
+                    </Grid>
+                    <StackPanel  Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                        <ItemsControl ItemsSource="{Binding Dates}"
                                       VerticalContentAlignment="Stretch">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal" FlowDirection="LeftToRight"/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Border Background="White" BorderBrush="DarkGoldenrod" BorderThickness="1 0 0 0"  Width="200">
-                                    <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
-                                        <ItemsControl ItemsSource="{Binding Times}" Width="200">
-                                            <ItemsControl.ItemsPanel>
-                                                <ItemsPanelTemplate>
-                                                    <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"/>
-                                                </ItemsPanelTemplate>
-                                            </ItemsControl.ItemsPanel>
-                                            <ItemsControl.ItemTemplate>
-                                                <DataTemplate>
-                                                    <ToggleButton Width="auto" Background="Transparent" BorderBrush="Green" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Grid}}, 
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel Orientation="Horizontal" FlowDirection="LeftToRight"/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Border Background="White" BorderBrush="DarkGoldenrod" BorderThickness="1 0 0 0"  Width="200">
+                                        <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                                            <ItemsControl ItemsSource="{Binding Times}" Width="200">
+                                                <ItemsControl.ItemsPanel>
+                                                    <ItemsPanelTemplate>
+                                                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"/>
+                                                    </ItemsPanelTemplate>
+                                                </ItemsControl.ItemsPanel>
+                                                <ItemsControl.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <ToggleButton Width="auto" Background="Transparent" BorderBrush="Green" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Grid}}, 
                                                     Path=DataContext.AddSelectedTimeCommand}" CommandParameter="{Binding Path=.}">
-                                                        <TextBlock>
-                                                            <TextBlock.Text>
-                                                                <MultiBinding StringFormat="{}{0:00}:{1:00;00}">
-                                                                    <Binding Path="StartTime.Hours" />
-                                                                    <Binding Path="StartTime.Minutes" />
-                                                                </MultiBinding>
-                                                            </TextBlock.Text>
-                                                        </TextBlock>
-                                                    </ToggleButton>
-                                                </DataTemplate>
-                                            </ItemsControl.ItemTemplate>
-                                        </ItemsControl>
-                                    </StackPanel>
-                                </Border>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </StackPanel>
+                                                            <TextBlock>
+                                                                <TextBlock.Text>
+                                                                    <MultiBinding StringFormat="{}{0:00}:{1:00;00}">
+                                                                        <Binding Path="StartTime.Hours" />
+                                                                        <Binding Path="StartTime.Minutes" />
+                                                                    </MultiBinding>
+                                                                </TextBlock.Text>
+                                                            </TextBlock>
+                                                        </ToggleButton>
+                                                    </DataTemplate>
+                                                </ItemsControl.ItemTemplate>
+                                            </ItemsControl>
+                                        </StackPanel>
+                                    </Border>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </StackPanel>
+                </Grid>
+                <ContentControl Content="{Binding BusyMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
+                <ContentControl Content="{Binding FailureMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
             </Grid>
         </Border>
     </DataTemplate>
