--- a/StatisticsModule/Views/RoomCapacityStatisticsView.xaml
+++ b/StatisticsModule/Views/RoomCapacityStatisticsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="StatisticsModule.Views.ScheduleStatisticsView"
+﻿<UserControl x:Class="StatisticsModule.Views.RoomCapacityStatisticsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,15 +6,67 @@
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
              xmlns:controls="clr-namespace:Core.Wpf.Controls;assembly=Core.Wpf"
              xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
-             xmlns:behaviours="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="900">
+             d:DesignHeight="600" d:DesignWidth="900">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Shared.DataTemplates;Component/Core.Data.xaml" />
             </ResourceDictionary.MergedDictionaries>
+       
+            <converters:LevelToMarginConverter x:Key="ConvertToThickness" LeftMargin="12" OtherMargin="4" />        
+            <Style x:Key="TreeExpanderStyle" TargetType="CheckBox">
+                <Setter Property="Background" Value="#FF448DCA"/>
+                <Setter Property="Foreground" Value="#FF000000"/>
+                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                <Setter Property="VerticalContentAlignment" Value="Top"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="CheckBox">
+                            <Grid HorizontalAlignment="Left">
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CheckStates">
+                                        <VisualState x:Name="Checked">
+                                            <Storyboard>
+                                                <ObjectAnimationUsingKeyFrames BeginTime="00:00:00" Duration="00:00:00.0010000" Storyboard.TargetName="IsExpandedIcon" Storyboard.TargetProperty="(UIElement.Visibility)">
+                                                    <DiscreteObjectKeyFrame KeyTime="00:00:00">
+                                                        <DiscreteObjectKeyFrame.Value>
+                                                            <Visibility>Visible</Visibility>
+                                                        </DiscreteObjectKeyFrame.Value>
+                                                    </DiscreteObjectKeyFrame>
+                                                </ObjectAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                        <VisualState x:Name="Unchecked">
+                                            <Storyboard>
+                                                <ObjectAnimationUsingKeyFrames BeginTime="00:00:00" Duration="00:00:00.0010000" Storyboard.TargetName="IsCollapsedIcon" Storyboard.TargetProperty="(UIElement.Visibility)">
+                                                    <DiscreteObjectKeyFrame KeyTime="00:00:00">
+                                                        <DiscreteObjectKeyFrame.Value>
+                                                            <Visibility>Visible</Visibility>
+                                                        </DiscreteObjectKeyFrame.Value>
+                                                    </DiscreteObjectKeyFrame>
+                                                </ObjectAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                        <VisualState x:Name="Indeterminate">
+                                            <!--<Storyboard>
+											    <DoubleAnimationUsingKeyFrames Storyboard.TargetName="IndeterminateIcon" Storyboard.TargetProperty="(UIElement.Opacity)">
+												    <SplineDoubleKeyFrame KeyTime="0" Value="1"/>
+											    </DoubleAnimationUsingKeyFrames>
+										    </Storyboard>-->
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                                <Path x:Name="IsCollapsedIcon" Data="M2,2 L14,7 L2,14 z" Fill="{TemplateBinding BorderBrush}" UseLayoutRounding="False" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Collapsed" />
+                                <Path x:Name="IsExpandedIcon" Data="M2,2 L14,2 L7,14 z" Fill="{TemplateBinding BorderBrush}" UseLayoutRounding="False" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Collapsed" />
+                                <Rectangle x:Name="IndeterminateIcon" Fill="#FF333333" Height="16" Width="16" Opacity="0"/>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
             <Style x:Key="GridSplitterStyle" TargetType="GridSplitter">
                 <Setter Property="Background" Value="#FFFFFFFF" />
                 <Setter Property="IsTabStop" Value="true" />
@@ -104,7 +156,6 @@
                 </Setter>
             </Style>
         </ResourceDictionary>
-        
     </UserControl.Resources>
 
     <Grid>
@@ -115,7 +166,8 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>                   
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -128,15 +180,12 @@
                 <TextBlock Grid.Row="1" Grid.Column="1" Text="-" Margin="5"/>
                 <DatePicker Grid.Row="1" Grid.Column="2" SelectedDate="{Binding EndDate, Mode=TwoWay}" Width="115" Margin="5,2"/>
                 
-                <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Text="Назначил:" Margin="5,20,5,2" />
-                <ComboBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3"
-                          ItemsSource="{Binding Employees}" 
-                            DisplayMemberPath="Field" 
-                            SelectedValuePath="Value"
-                            SelectedValue="{Binding SelectedEmployeeId, Mode=TwoWay}"
-                            Margin="5,2"/>
-                
-                <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Command="{Binding LoadResultCommand}" Margin="5,10">
+                <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Text="Место выполнения:" Margin="5,20,5,2" />
+                <CheckBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Content="амбулаторно" IsChecked="{Binding IsAmbulatory}"  Margin="5,2"/>
+                <CheckBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Content="в условиях стационара" IsChecked="{Binding IsStationary}"  Margin="5,2"/>
+                <CheckBox Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Content="в условиях дневного стационара" IsChecked="{Binding IsDayStationary}" Margin="5,2"/>
+                              
+                <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" Command="{Binding LoadResultCommand}" Margin="5,10">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="pack://application:,,,/Core;Component/Resources/Images/Ok48x48.png" Stretch="Uniform" Height="24" Width="24"/>
                         <TextBlock Text="Показать результат" Margin="5,10" FontWeight="SemiBold" FontSize="14"/>
@@ -151,12 +200,53 @@
                 </Grid.RowDefinitions>
 
                 <DataGrid Grid.Row="0" AutoGenerateColumns="False" CanUserAddRows="False" 
-                          behaviours:DataGridColumnsBehavior.BindableColumns="{Binding Columns}"
                           ItemsSource="{Binding Source, Mode=TwoWay}" 
-                          CurrentCell="{Binding SelectedCell, Mode=TwoWay}"
-                          SelectionMode="Single" SelectionUnit="Cell"
+                          SelectedItem="{Binding SelectedSource, Mode=TwoWay}"
+                          SelectionMode="Single"   
                           ScrollViewer.CanContentScroll="True" 
                           ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                    <DataGrid.RowStyle>
+                        <Style TargetType="DataGridRow">
+                            <Setter Property="Visibility" Value="{Binding IsVisible, Converter={x:Static converters:BoolToCollapsedConverter.Instance}}" />
+                        </Style>
+                    </DataGrid.RowStyle>
+                    
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn Header="Наименование услуги" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal" >
+                                        <CheckBox Style="{StaticResource TreeExpanderStyle}" 
+                                                  IsChecked="{Binding IsExpanded, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                                  Margin="{Binding Path=Level, Converter={StaticResource ConvertToThickness}}"
+                                                  Visibility="{Binding HasChildren, Converter={x:Static converters:BoolToInvisibilityConverter.Instance}}"/>
+                                        <TextBlock Text="{Binding Cells[0]}" Margin="4" IsEnabled="false"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTextColumn Header="Всего мест" Binding="{Binding Cells[1]}" IsReadOnly="True">
+                            <DataGridTextColumn.CellStyle>
+                                <Style>
+                                    <Setter Property="TextBlock.TextAlignment" Value="Center"/>
+                                </Style>
+                            </DataGridTextColumn.CellStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Записано" Binding="{Binding Cells[2]}" IsReadOnly="True">
+                            <DataGridTextColumn.CellStyle>
+                                <Style>
+                                    <Setter Property="TextBlock.TextAlignment" Value="Center"/>
+                                </Style>
+                            </DataGridTextColumn.CellStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Свободные места" Binding="{Binding Cells[3]}" IsReadOnly="True">
+                            <DataGridTextColumn.CellStyle>
+                                <Style>
+                                    <Setter Property="TextBlock.TextAlignment" Value="Center"/>
+                                </Style>
+                            </DataGridTextColumn.CellStyle>
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
                 </DataGrid>
 
                 <GridSplitter Grid.Row="1" Style="{StaticResource GridSplitterStyle}" 
@@ -168,23 +258,22 @@
                           ScrollViewer.CanContentScroll="True" 
                           ScrollViewer.HorizontalScrollBarVisibility="Auto">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Дата" Binding="{Binding AssignDateTime, StringFormat='dd.MM.yyyy HH:mm'}" IsReadOnly="True">
+                        <DataGridTextColumn Header="Дата" Binding="{Binding Cells[0]}" IsReadOnly="True">
+                            <DataGridTextColumn.CellStyle>
+                                <Style>
+                                    <Setter Property="TextBlock.TextAlignment" Value="Center"/>
+                                </Style>
+                            </DataGridTextColumn.CellStyle>
+                        </DataGridTextColumn>                        
+                        <DataGridTextColumn Header="Мед. карта" Binding="{Binding Cells[1]}" IsReadOnly="True">
                             <DataGridTextColumn.CellStyle>
                                 <Style>
                                     <Setter Property="TextBlock.TextAlignment" Value="Center"/>
                                 </Style>
                             </DataGridTextColumn.CellStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="Мед. карта" Binding="{Binding CardNumber}" IsReadOnly="True">
-                            <DataGridTextColumn.CellStyle>
-                                <Style>
-                                    <Setter Property="TextBlock.TextAlignment" Value="Center"/>
-                                </Style>
-                            </DataGridTextColumn.CellStyle>
-                        </DataGridTextColumn>
-                        <DataGridTextColumn Header="Ф.И.О. пациента, г.р." Width="*" Binding="{Binding PatientFIO}" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="Услуга" Width="*" Binding="{Binding Name}" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="Источник финансирования" Width="*" Binding="{Binding FinancingSourceName}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="Ф.И.О. пациента, г.р." Width="*" Binding="{Binding Cells[2]}" IsReadOnly="True"/>                        
+                        <DataGridTextColumn Header="Место выполнения" Binding="{Binding Cells[4]}" IsReadOnly="True"/>                       
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
